--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --reporter spec",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "client": "npm run start --prefix client"
   },
   "author": "Raader",
   "license": "ISC",
+  "nodemonConfig": {
+    "ignore": [
+      "client/*"
+    ]
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "config": "^3.3.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "chai": "^4.3.0",
     "mocha": "^8.3.0",
+    "nodemon": "^2.0.7",
     "request": "^2.88.2"
   }
 }
