--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec",
+    "test": "NODE_ENV=test mocha",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "client": "npm run start --prefix client"
@@ -16,6 +16,7 @@
       "client/*"
     ]
   },
+  "eslint.autoFixOnSave": true,
   "dependencies": {
     "config": "^3.3.3",
     "express": "^4.17.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.0",
+    "eslint": "^7.20.0",
     "mocha": "^8.3.0",
     "nodemon": "^2.0.7",
     "request": "^2.88.2"
