--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha",
+    "test": "NODE_ENV=test mocha --exit",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "client": "npm run start --prefix client"
@@ -18,6 +18,7 @@
   },
   "eslint.autoFixOnSave": true,
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "config": "^3.3.3",
     "express": "^4.17.1",
     "mongoose": "^5.11.15"
