--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "bcrypt": "^5.0.0",
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
     "eslint": "^7.20.0",
     "mocha": "^8.3.0",
-    "nodemon": "^2.0.7",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.7"
   }
 }
