--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "parse-bearer-token": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.3.0",
