--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test mocha --exit",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "client": "npm run start --prefix client"
+    "client": "npm run start --prefix client",
+    "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Raader",
   "license": "ISC",
